--- a/password/src/app/app.component.html
+++ b/password/src/app/app.component.html
@@ -23,3 +23,7 @@
   <input type="text" name="password" id="password" [value]="password">
 </div>
 <h1>{{message}}</h1>
+
+<!-- my avatar -->
+<img
+  src='https://avataaars.io/?avatarStyle=Circle&topType=LongHairBob&accessoriesType=Blank&hairColor=BrownDark&facialHairType=Blank&clotheType=Hoodie&clotheColor=Blue02&eyeType=Wink&eyebrowType=RaisedExcited&mouthType=Smile&skinColor=Light' />
