ngSwitch & intercepting a property to directives

--- a/pages/src/app/app.component.html
+++ b/pages/src/app/app.component.html
@@ -12,7 +12,15 @@
   </ul>
 </nav>
 
-<div>
+<!-- <div>
   <h4>{{images[currentPage].title}}</h4>
   <img [src]='images[currentPage].url' />
+</div> -->
+
+<div [ngSwitch]='currentPage'>
+  <div *ngSwitchCase='currentPage'>
+    <h4 appClass [backgroundColor]="'red'">{{images[currentPage].title}}</h4>
+    <img [src]='images[currentPage].url' />
+  </div>
+  <div *ngSwitchDefault>Default</div>
 </div>
