--- a/pages/src/app/app.component.html
+++ b/pages/src/app/app.component.html
@@ -19,7 +19,7 @@
 
 <div [ngSwitch]='currentPage'>
   <div *ngSwitchCase='currentPage'>
-    <h4 appClass [backgroundColor]="'red'">{{images[currentPage].title}}</h4>
+    <h4 [appClass]="'red'">{{images[currentPage].title}}</h4>
     <img [src]='images[currentPage].url' />
   </div>
   <div *ngSwitchDefault>Default</div>
