custom structural directives - appTimes

--- a/pages/src/app/app.component.html
+++ b/pages/src/app/app.component.html
@@ -24,3 +24,8 @@
   </div>
   <div *ngSwitchDefault>Default</div>
 </div>
+
+<!-- custom structural directives - appTimes -->
+<ul *appTimes='5'>
+  <li>message!</li>
+</ul>
