--- a/pages/src/app/app.component.html
+++ b/pages/src/app/app.component.html
@@ -2,9 +2,10 @@
   <ul class="pagination">
     <li class="page-item" [appClass]="{disabled: currentPage===0}"><a class="page-link"
         (click)="currentPage=currentPage-1">Prev</a></li>
-    <ng-container *ngFor="let image of images; let i = index">
+    <!-- custom structural directives - appTimes -->
+    <ng-container *appTimes='images.length;let i = index'>
       <li class="page-item" [appClass]="{ active: i === currentPage }" *ngIf="checkIndex(i)">
-        <a (click)="currentPage=i" class="page-link">{{ i + 1 }}</a>
+        <a (click)="currentPage = i" class="page-link">{{ i + 1 }}</a>
       </li>
     </ng-container>
     <li class="page-item" [appClass]="{disabled: currentPage===images.length-1}"><a class="page-link"
@@ -25,7 +26,7 @@
   <div *ngSwitchDefault>Default</div>
 </div>
 
-<!-- custom structural directives - appTimes -->
+
 <ul *appTimes='5'>
   <li>message!</li>
 </ul>
