--- a/todo/src/app/app.component.html
+++ b/todo/src/app/app.component.html
@@ -1,3 +1,4 @@
+<!-- <router-outlet></router-outlet> -->
 <h1>{{title}}</h1>
 <app-input-item (todoItemCreated)='addNewTodoItem($event)'></app-input-item>
 
