--- a/todo/src/app/app.component.html
+++ b/todo/src/app/app.component.html
@@ -1,5 +1,8 @@
-<!-- <router-outlet></router-outlet> -->
-<h1>{{title}}</h1>
+<a routerLink="/">Todo List</a> |
+<a routerLink="/input">Input</a>
+<hr />
+<router-outlet></router-outlet>
+<!-- <h1>{{title}}</h1>
 <app-input-item (todoItemCreated)='addNewTodoItem($event)'></app-input-item>
 
-<app-todos [todos]='todoList'></app-todos>
+<app-todos [todos]='todoList'></app-todos> -->
