--- a/todo/src/app/todos/todos.component.html
+++ b/todo/src/app/todos/todos.component.html
@@ -1,3 +1,3 @@
-<ul *ngFor='let todo of todos'>
-  <li>{{todo}}</li>
+<ul>
+  <li *ngFor='let todo of todos' (click)='onRemoveTodoItem(todo)'>{{todo}}</li>
 </ul>
