--- a/todo/src/app/app.component.html
+++ b/todo/src/app/app.component.html
@@ -1,7 +1,11 @@
-<a routerLink="/">Todo List</a> |
-<a routerLink="/input">Input</a>
-<hr />
-<router-outlet></router-outlet>
+<div class='ui three item menu' role="navigation">
+  <a class="item" routerLink="/" active>Todo List</a>
+  <a class="item" routerLink="/input">Input</a>
+
+</div>
+<div class='container'>
+  <router-outlet></router-outlet>
+</div>
 <!-- <h1>{{title}}</h1>
 <app-input-item (todoItemCreated)='addNewTodoItem($event)'></app-input-item>
 
