--- a/todo/src/app/input-item/input-item.component.html
+++ b/todo/src/app/input-item/input-item.component.html
@@ -1,3 +1,5 @@
 <label for="item">Enter New Todo Item</label>
-<input type="text" id='item' [(ngModel)]="enteredNewItem" />
-<button (click)="onAddNewTodo()">Add</button>
+<div class="ui input focus">
+  <input type="text" id='item' [(ngModel)]="enteredNewItem" placeholder="Add new todo item..." />
+</div>
+<button class="ui orange button" (click)="onAddNewTodo()">Add</button>
