--- a/todo/src/app/todos/todos.component.html
+++ b/todo/src/app/todos/todos.component.html
@@ -1,3 +1,3 @@
-<ul>
-  <li *ngFor='let todo of todos' (click)='onRemoveTodoItem(todo)'>{{todo}}</li>
-</ul>
+<div class="ui bulleted list">
+  <div class="item" *ngFor='let todo of todos' (click)='onRemoveTodoItem(todo)'>{{todo}}</div>
+</div>
