Rounting and navigation

--- a/comps/src/app/app.component.html
+++ b/comps/src/app/app.component.html
@@ -1,16 +1,18 @@
-<app-elements-home></app-elements-home>
+<!-- <app-elements-home></app-elements-home>
 <app-collections-home></app-collections-home>
 <app-views-home></app-views-home>
-<app-mods-home></app-mods-home>
-<h2>Navigation</h2>
+<app-mods-home></app-mods-home> -->
 <div class="ui container">
+  <h1 class='ui header'>Navigation</h1>
   <div class="ui secondary pointing menu">
     <a routerLink="/elements" routerLinkActive='active' class='item'>Elements</a>
     <a routerLink="/views" routerLinkActive='active' class='item'>Views</a>
     <a routerLink="/collections" routerLinkActive='active' class='item'>Collections</a>
     <a routerLink="/mods" routerLinkActive='active' class='item'>Mods</a>
+    <a routerLink="/projects" routerLinkActive='active' class='item'>Projects</a>
   </div>
   <div class="ui segment">
     <router-outlet></router-outlet>
   </div>
 </div>
+ 
